# dilawarpy

./: .travis.yml  README.md  ajgar.py  pyproject.toml  random.py  requirements.txt  setup.py  text_processing.py  upload_pypi.sh
.github/workflows/: pythonapp.yml
dilawar/: __init__.py  core.py  functions.py  io_utils.py  md2pdf.py  plot_utils.py  version.py
dilawar/pandoc/: __main__.py  dilawar.py  gls.py  tikz.py  utils.py
src/: __init__.py  data_analysis.py  file_utils.py  information_theory.py  io_utils.py  logger.py  plot_utils.py  statistics.py  text_processing.py
