[tool.poetry]
name = "dilawar"
version = "0.9.2"
description = "Personal collection of utilities"
authors = ["Dilawar Singh <dilawar.s.rajput@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.9,<4"
numpy = "^1.20.3"
pypandoc = "^1.5"
Pint = "^0.17"
panflute = "^2.1.0"
colorama = "^0.4.4"
pandocfilters = "^1.4.3"
matplotlib = "^3.4.2"
networkx = {version = "^2.5.1", optional = true}
pydot = {version = "^1.4.2", optional = true}
pygraphviz = {version = "^1.7", optional = true}
loguru = "^0.5.3"

[tool.poetry.extras]
graph = [ "networkx", "pydot" ]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
scipy = "^1.6.3"
Brian2 = "^2.4.2"
pandas = "^1.2.4"
tables = "^3.6.1"
black = "^21.5b2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = '*.py'
addopts = "-s"
testpaths = [ "dilawar"]

[tool.poetry.scripts]
pandoc-gls = "dilawar.bin.gls:main"
pandoc-quantity = "dilawar.bin.quantity:main"
